# governance

./: .coderabbit.yaml  .editorconfig  .editorconfig-checker.json  .env.example  .gitattributes  .gitignore  .markdownlint.jsonc  .taplo.toml  Cargo.toml  README.md  SECURITY.md  atlantis.yaml  devenv.nix  devenv.yaml  flake.nix  jsonschema-gentypes.yaml  pyproject.toml  ruff.toml  taplo.toml
.devcontainer/: devcontainer.json  post-create.sh  postCreateCommand.sh
.forgejo/: CODEOWNERS
.github/: CODEOWNERS  CONTRIBUTING.md
__meta/synchronizer/: README.md  pyproject.toml  requirements.txt  sync.py  sync_github.py  sync_keycloak.py  sync_secrets.py  sync_slack.py  sync_vault.py  utils.py  vault_utils.py
__meta/synchronizer/synchronizer/: main.py  sync.py  sync_github.py  sync_keycloak.py  sync_secrets.py  sync_slack.py  sync_vault.py  utils.py
__meta/synchronizer/synchronizer/clients/: __init__.py  github_client.py  keycloak_client.py  minio_client.py  railway_client.py  vault_client.py
__meta/synchronizer/synchronizer/logger/: __init__.py  app_logger.py  components.py  config.py  constants.py  logger_components.py  singleton.py  utils.py
__meta/synchronizer/synchronizer/models/: __init__.py  contributor.py  repo.py  team.py
__meta/synchronizer/synchronizer/services/: abstract_synchronizer.py  codeowners_synchronizer.py  github_synchronizer.py  google_drive_synchronizer.py  keycloak_synchronizer.py  leadership_synchronizer.py  minio_synchronizer.py  secrets_synchronizer.py  slack_synchronizer.py  sync_codeowners.py  sync_github.py  sync_keycloak.py  sync_secrets.py  sync_slack.py  sync_vault.py  vault_synchronizer.py
__meta/synchronizer/synchronizer/types/: contributor.py  team.py
__meta/synchronizer/synchronizer/utils/: __init__.py  env_urls.py  github_client.py  keycloak_client.py  logging.py
contributors/: A-Speedy-Giraffe.toml  Adrastopoulos.toml  AlexDaGreat555.toml  AliceeLe.toml  Arom1a.toml  Cometgerms.toml  EcstaticPilot.toml  FarmerJohnsBessie.toml  Gostmeaper.toml  HeidiTao.toml  JackHurew.toml  Jc-965.toml  JeffreyYijiWang.toml  JessCai06.toml  JettChenT.toml  Junsouh.toml  KothurVidur.toml  LeonLiu368.toml  MaroonCoffee.toml  NethakaH.toml  Nicolapps.toml  Richard-31415.toml  SayeVikram.toml  ScottyLabsDeploy.toml  TenType.toml  Wunwan.toml  Yuxiang-Huang.toml  acluous.toml  adrian-h-zhuang.toml  alanj268.toml  angiegabraham.toml  ap-1.toml  aparikh2.toml  axgu.toml  cahove.toml  cgaul26.toml  chenalex1.toml  cirex-web.toml  deBrian07.toml  dependabot-bot.toml  (+34 more)
crates/governance-cli/: Cargo.toml
crates/governance-cli/src/: main.rs
crates/governance-core/: Cargo.toml
crates/governance-core/src/: bridge_identity.rs  check_pr.rs  error.rs  keycloak.rs  lib.rs  loader.rs  posthog.rs  slack.rs  validator.rs
data/: org.toml
docs/: add-a-team.md  add-a-user.md  adding-yourself-to-a-team.md  contributors.md  creating-teams.md  repos.md  teams.md
nix/: base.nix  data.nix
repos/: governance.toml  infrastructure.toml
schemas/: org.schema.json  team.schema.json
scripts/: authentik_group.py  requirements.txt  secrets-pull.sh  secrets-push.sh  sync.py  sync_github.py  sync_keycloak.py  sync_vault.py
synchronizer/: requirements.txt  styler.py  sync.py  sync_github.py  sync_keycloak.py  sync_slack.py  sync_vault.py
teams/: cmucal.toml  cmucourses.toml  cmueats.toml  cmumaps.toml  cmusearch.toml  corgi.toml  devops.toml  dummy.toml  events-api.toml  flex.toml  governance.toml  graph.toml  internal-tooling.toml  leadership.toml  lost-and-found.toml  scottystack.toml  sl-ai.toml  terrier.toml
tofu/: .gitignore  cdn.tf.json  discord.tf.json  forgejo.tf  forgejo_docs_webhooks.tf.json  forgejo_kennel_webhooks.tf.json  forgejo_memberships.tf.json  forgejo_push_mirrors.tf.json  forgejo_repos.tf.json  forgejo_team_repos.tf.json  forgejo_teams.tf.json  github_memberships.tf.json  github_repos.tf.json  github_teams.tf.json  google_groups.tf.json  identities.tf.json  kennel.tf  keycloak.tf  keycloak_clients.tf.json  keycloak_groups.tf.json  litellm.tf.json  (+11 more)
(+93 files in other folders)
