[workspace]
resolver = "2"
members = ["crates/governance-cli","crates/governance-core","crates/governance-schema", "crates/governance-tfgen"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://codeberg.org/ScottyLabs/governance"

[workspace.dependencies]
governance-schema = { path = "crates/governance-schema" }
governance-core = { path = "crates/governance-core" }
governance-tfgen = { path = "crates/governance-tfgen" }
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
toml = "1.1.0"
